--- a/src/Renode/Properties/AssemblyInfo.template
+++ b/src/Renode/Properties/AssemblyInfo.template
@@ -20,6 +20,7 @@ using System.Runtime.CompilerServices;
 // and "{Major}.{Minor}.{Build}.*" will update just the revision.
 
 [assembly: AssemblyVersion("1.0.0.*")]
+[assembly: AssemblyInformationalVersion("%VERSION%")]
 
 // The following attributes are used to specify the signing key for the assembly,
 // if desired. See the Mono documentation for more information about signing.
