[#8842] Add support for Termsharp.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/Emul8"]
 	path = src/Emul8
 	url = https://github.com/antmicro/emul8.git
+[submodule "src/External/termsharp"]
+	path = src/External/termsharp
+	url = https://github.com/antmicro/termsharp.git
