[FIX] Simplify Powershell script execution.

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -171,7 +171,7 @@
   </ItemGroup>
   <Target Name="CreateAssemblyVersionInfo" BeforeTargets="PrepareForBuild">
     <Exec Command="cd Properties; ../../Emul8/Tools/scripts/createAssemblyInfo.sh" Condition="$(CurrentPlatform) != 'Windows'" />
-    <!--The '&' character instead of ';' is required for Windows.-->
-    <Exec Command="cd Properties &amp; powershell -File ../../Emul8/Tools/scripts/createAssemblyInfo.ps1 -ExecutionPolicy unrestricted" Condition="$(CurrentPlatform) == 'Windows'" />
+    <!--The Powershell pipe is used for running the script without altering execution policy on host machine.-->
+    <Exec Command="cd Properties -and powershell Get-Content ../../Emul8/Tools/scripts/createAssemblyInfo.ps1 | powershell -command -" Condition="$(CurrentPlatform) == 'Windows'" />
   </Target>
 </Project>
