[#8789] Fix quotation in PowerShell command.

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -172,6 +172,6 @@
   <Target Name="CreateAssemblyVersionInfo" BeforeTargets="PrepareForBuild">
     <Exec Command="cd Properties; ../../Emul8/Tools/scripts/createAssemblyInfo.sh" Condition="$(CurrentPlatform) != 'Windows'" />
     <!--The Powershell pipe is used for running the script without altering execution policy on host machine.-->
-    <Exec Command="cd Properties -and powershell Get-Content ../../Emul8/Tools/scripts/createAssemblyInfo.ps1 | powershell -command -" Condition="$(CurrentPlatform) == 'Windows'" />
+    <Exec Command="cd Properties &amp; powershell &quot;Get-Content ../../Emul8/Tools/scripts/createAssemblyInfo.ps1 | powershell -command -&quot;" Condition="$(CurrentPlatform) == 'Windows'" />
   </Target>
 </Project>
