--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -184,6 +184,10 @@
       <Project>{13222114-707C-4EFD-8289-2728351FB7E9}</Project>
       <Name>cores-sparc</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-riscv.csproj">
+      <Project>{63222124-707C-5EFD-8289-2728351FB7E9}</Project>
+      <Name>cores-riscv</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Peripherals\Peripherals.csproj">
       <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
       <Name>Peripherals</Name>
