--- a/src/Renode/Properties/AssemblyInfo.template
+++ b/src/Renode/Properties/AssemblyInfo.template
@@ -19,8 +19,8 @@ using System.Runtime.CompilerServices;
 // The form "{Major}.{Minor}.*" will automatically update the build and revision,
 // and "{Major}.{Minor}.{Build}.*" will update just the revision.
 
-[assembly: AssemblyVersion("1.2.0.*")]
-[assembly: AssemblyInformationalVersion("%VERSION%")]
+[assembly: AssemblyVersion("%VERSION%.*")]
+[assembly: AssemblyInformationalVersion("%INFORMATIONAL_VERSION%")]
 
 // The following attributes are used to specify the signing key for the assembly,
 // if desired. See the Mono documentation for more information about signing.
