--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -101,6 +101,7 @@
     <Compile Include="RobotFrameworkEngine\RobotFrameworkKeywordAttribute.cs" />
     <Compile Include="RobotFrameworkEngine\UartKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\XmlRpcServer.cs" />
+    <Compile Include="RobotFrameworkEngine\HelperExtensions.cs" />
     <Compile Include="Network\RangeLossMediumFunction.cs" />
     <Compile Include="Network\RangeMediumFunction.cs" />
     <Compile Include="Backends\Terminals\UartPtyTerminal.cs" />
