[#10361] Introduce log tester for robot framework.

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -102,6 +102,7 @@
     <Compile Include="RobotFrameworkEngine\UartKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\XmlRpcServer.cs" />
     <Compile Include="RobotFrameworkEngine\HelperExtensions.cs" />
+    <Compile Include="RobotFrameworkEngine\LogTester.cs" />
     <Compile Include="Network\RangeLossMediumFunction.cs" />
     <Compile Include="Network\RangeMediumFunction.cs" />
     <Compile Include="Backends\Terminals\UartPtyTerminal.cs" />
