--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -220,6 +220,10 @@
       <Project>{66A9995A-13AE-4454-88A6-29EB2D6F5988}</Project>
       <Name>WiresharkPlugin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Plugins\VerilatorPlugin\VerilatorPlugin.csproj">
+      <Project>{45A27C6A-1831-4E0D-84C2-FB3893E7FBE5}</Project>
+      <Name>VerilatorPlugin</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-riscv64.csproj">
       <Project>{BB222124-707C-5EFD-8289-2728351FB7AA}</Project>
       <Name>cores-riscv64</Name>
