[#13347] Extract `TestersProvider` base class.

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -98,6 +98,7 @@
     <Compile Include="RobotFrameworkEngine\Recorder.cs" />
     <Compile Include="RobotFrameworkEngine\RenodeKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\RobotFrameworkKeywordAttribute.cs" />
+    <Compile Include="RobotFrameworkEngine\TestersProvider.cs" />
     <Compile Include="RobotFrameworkEngine\UartKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\XmlRpcServer.cs" />
     <Compile Include="RobotFrameworkEngine\HelperExtensions.cs" />
