--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -99,6 +99,7 @@
     <Compile Include="RobotFrameworkEngine\RenodeKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\RobotFrameworkKeywordAttribute.cs" />
     <Compile Include="RobotFrameworkEngine\TestersProvider.cs" />
+    <Compile Include="RobotFrameworkEngine\NetworkInterfaceKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\UartKeywords.cs" />
     <Compile Include="RobotFrameworkEngine\XmlRpcServer.cs" />
     <Compile Include="RobotFrameworkEngine\HelperExtensions.cs" />
