[#14493] Fix configuration in .sln files.

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>Renode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <PropertiesLocation>..\..\output\properties.csproj</PropertiesLocation>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <Import Project="$(PropertiesLocation)" />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
