[#16239] Fix copying licenses and move dlls in Win Conda package

--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -6,7 +6,7 @@ source:
     git_url: https://github.com/renode/renode.git
     git_rev: master
     patches:
-        - lower_mono_version.patch
+        - lower_mono_version.patch [not win]
 
 requirements:
     build:
