--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -17,6 +17,7 @@
     - tests/unit-tests/robot-integration.robot
     - tests/unit-tests/platform_descriptions.robot
     - tests/unit-tests/riscv-unit-tests.robot
+    - tests/unit-tests/it-status.robot
     - tests/platforms/SAME70.robot
     - tests/platforms/Murax.robot
     - tests/unit-tests/monitor-tests.robot
