--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -29,3 +29,4 @@
     - tests/platforms/CC2538/cc2538_flash_controller.robot
     - tests/platforms/CC2538/cc2538_single-node.robot
     - tests/platforms/LiteX/Netv_LiteX_VexRiscv.robot
+    - tests/platforms/LiteX/Nexys4DDR_LiteX_VexRiscv.robot
