[#18660] conda-package: Allow any Python on Windows
Required 'python =2.7' and 'vc >=10' packages conflict with each other.

Also, the python package version specification is cleared up by using
'2.7.*'. It matches the same versions as '=2.7' (the fuzzy constraint),
which is barely documented and can be easily mistaken for '==2.7' (which
can only match exact versions 2.7/2.7.0 etc.).

--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -10,7 +10,8 @@ source:
 
 requirements:
     build:
-        - python =2.7
+        - python 2.7.* [not win]
+        - python [win]
         - git
         - automake [not win]
         - autoconf [not win]
@@ -21,7 +22,8 @@ requirements:
         - gtk2 [not win]
         - vc >=10 [win]
     run:
-        - python =2.7
+        - python 2.7.* [not win]
+        - python [win]
         - glib [not win]
         - mono [not win]
         - gtk2 [not win]
