[#18660] conda-package: Add simple testing command

--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -38,6 +38,10 @@ requirements:
         - psutil
         - pyyaml
 
+test:
+    commands:
+        - renode --help
+
 about:
     home: https://github.com/renode/renode
     license: The MIT License (MIT)
