[#18660] conda-package: Whitelist .NET's mscoree.dll
Most of the Renode libraries on Windows need 'mscoree.dll', because it's
the essential .NET library. It is neither packaged with Renode nor any
'requirements:run' package, which triggers multiple warnings during
building.

Whitelisting this library in the 'build:missing_dso_whitelist' simply
informs 'conda-build' that it will be provided from outside Conda.

--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -8,6 +8,11 @@ source:
     patches:
         - lower_mono_version.patch [not win]
 
+build:
+    missing_dso_whitelist:
+        # This library comes with .NET
+        - "$SYSROOT/System32/mscoree.dll" [win]
+
 requirements:
     build:
         - python 2.7.* [not win]
