--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -31,3 +31,4 @@
     - tests/platforms/LiteX/Netv_LiteX_VexRiscv.robot
     - tests/platforms/LiteX/Nexys4DDR_LiteX_VexRiscv.robot
     - tests/platforms/Microwatt.robot
+    - tests/platforms/LiteX/LiteX_VexRiscv_SMP.robot
