--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -31,3 +31,4 @@
 - tests/platforms/Microwatt.robot
 - tests/platforms/LiteX/LiteX_VexRiscv_SMP.robot
 - tests/platforms/LiteX/LiteX_Microwatt.robot
+- tests/network-server/NetworkServer.robot
