--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -32,3 +32,4 @@
 - tests/platforms/LiteX/LiteX_VexRiscv_SMP.robot
 - tests/platforms/LiteX/LiteX_Microwatt.robot
 - tests/network-server/NetworkServer.robot
+- tests/platforms/LiteX/LiteX_VexRiscv_Linux_SDCard.robot
