--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -30,3 +30,4 @@
 - tests/platforms/LiteX/Nexys4DDR_LiteX_VexRiscv.robot
 - tests/platforms/Microwatt.robot
 - tests/platforms/LiteX/LiteX_VexRiscv_SMP.robot
+- tests/platforms/LiteX/LiteX_Microwatt.robot
