[#19850] Add LiteX_I2S model

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -34,3 +34,4 @@
 - tests/platforms/LiteX/LiteX_Microwatt.robot
 - tests/network-server/NetworkServer.robot
 - tests/platforms/LiteX/LiteX_VexRiscv_Linux_SDCard.robot
+- tests/platforms/LiteX/LiteX_VexRiscv_I2S.robot
