--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
     git_url: https://github.com/renode/renode.git
-    git_rev: master
+    git_rev: relaxed_conda_requirements
     patches:
         - use_conda_cc.patch       [not win]
         - lower_mono_version.patch [not win]
@@ -19,7 +19,7 @@ requirements:
         - {{ compiler('cxx') }}
         - {{ compiler('c') }}
         - git
-        - python 2.7.*   [not win]
+        - python         [not win]
         - python         [win]
         - automake       [not win]
         - autoconf       [not win]
@@ -28,7 +28,7 @@ requirements:
         - gtk2           [not win]
         - vc >=10        [win]
     run:
-        - python 2.7.*   [not win]
+        - python         [not win]
         - python         [win]
         - glib           [not win]
         - mono           [not win]
@@ -38,7 +38,7 @@ requirements:
         - pango          [not win]
         - atk            [not win]
         - fontconfig     [not win]
-        - robotframework
+        - robotframework 3.1
         - netifaces
         - requests
         - psutil
