--- a/tools/packaging/conda/meta.yaml
+++ b/tools/packaging/conda/meta.yaml
@@ -38,7 +38,7 @@ requirements:
         - pango          [not win]
         - atk            [not win]
         - fontconfig     [not win]
-        - robotframework
+        - robotframework 3.1
         - netifaces
         - requests
         - psutil
