--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -36,3 +36,4 @@
 - tests/platforms/LiteX/LiteX_VexRiscv_Linux_SDCard.robot
 - tests/platforms/LiteX/LiteX_VexRiscv_I2S.robot
 - tests/platforms/NXP-K64F.robot
+- tests/platforms/STM32F4_Discovery.robot
