--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -37,3 +37,4 @@
 - tests/platforms/LiteX/LiteX_VexRiscv_I2S.robot
 - tests/platforms/NXP-K64F.robot
 - tests/platforms/STM32F4_Discovery.robot
+- tests/platforms/NRF52840.robot
