--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -40,3 +40,4 @@
 - tests/platforms/STM32F4_Discovery.robot
 - tests/platforms/NRF52840.robot
 - tests/platforms/Icicle-Kit.robot
+- tests/unit-tests/riscv-custom-instructions.robot
