[#21309] Add tests for Icicle Kit on PolarFire SoC

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -39,3 +39,4 @@
 - tests/platforms/NXP-K64F.robot
 - tests/platforms/STM32F4_Discovery.robot
 - tests/platforms/NRF52840.robot
+- tests/platforms/Icicle-Kit.robot
