[DEV] Add STM32W108 robot test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -42,3 +42,4 @@
 - tests/platforms/Icicle-Kit.robot
 - tests/unit-tests/riscv-custom-instructions.robot
 - tests/metrics-analyzer/metrics-analyzer.robot
+- tests/platforms/STM32W108.robot
