[#22009] Add LSM9DS1 IMU/magnetic sensors

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -44,3 +44,4 @@
 - tests/metrics-analyzer/metrics-analyzer.robot
 - tests/platforms/STM32W108.robot
 - tests/platforms/STM32F7.robot
+- tests/peripherals/LSM9DS1.robot
