[#22976] Add LIS2DS12 sensor test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -48,3 +48,4 @@
 - tests/peripherals/LSM330.robot
 - tests/peripherals/ArduCAMMini2MPPlus.robot
 - tests/peripherals/BMP180.robot
+- tests/peripherals/LIS2DS12.robot
