--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -49,3 +49,4 @@
 - tests/peripherals/ArduCAMMini2MPPlus.robot
 - tests/peripherals/BMP180.robot
 - tests/peripherals/LIS2DS12.robot
+- tests/peripherals/LSM303.robot
