[DEV] Add adhoc compiler test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -50,3 +50,4 @@
 - tests/peripherals/BMP180.robot
 - tests/peripherals/LIS2DS12.robot
 - tests/peripherals/LSM303.robot
+- tests/unit-tests/adhoc-compiler.robot
