[#23354] Add Tock on LiteX/VexRiscv demo

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -56,3 +56,4 @@
 - tests/platforms/Arnold.robot
 - tests/platforms/CrossLink-NX-EVN.robot
 - tests/platforms/STM32F4_Tock.robot
+- tests/platforms/LiteX/LiteX_Tock.robot
