[#24542] Add tock demo for stm32f4

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -53,3 +53,4 @@
 - tests/platforms/OpenTitan.robot
 - tests/platforms/Arnold.robot
 - tests/platforms/CrossLink-NX-EVN.robot
+- tests/platforms/STM32F4_Tock.robot
