--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -58,3 +58,4 @@
 - tests/platforms/STM32F4_Tock.robot
 - tests/platforms/LiteX/LiteX_Tock.robot
 - tests/platforms/LiteX/LiteX_Ibex.robot
+- tests/platforms/QuickFeather.robot
