--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -24,6 +24,7 @@
 - tests/platforms/LiteX/LiteX_Linux_VexRiscv.robot
 - tests/platforms/Fomu.robot
 - tests/platforms/verilated/UARTLite.robot
+- tests/platforms/verilated/axi.robot
 - tests/platforms/CC2538/cc2538_rpl-udp.robot
 - tests/platforms/CC2538/cc2538_flash_controller.robot
 - tests/platforms/CC2538/cc2538_single-node.robot
