[#24674] tests: Add LiteX/Ibex to the list of test files

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -57,3 +57,4 @@
 - tests/platforms/CrossLink-NX-EVN.robot
 - tests/platforms/STM32F4_Tock.robot
 - tests/platforms/LiteX/LiteX_Tock.robot
+- tests/platforms/LiteX/LiteX_Ibex.robot
