--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -60,3 +60,4 @@
 - tests/platforms/LiteX/LiteX_Ibex.robot
 - tests/platforms/QuickFeather.robot
 - tests/platforms/STM32F072b.robot
+- tests/platforms/BeagleV-StarLight.robot
