[#25120] Enable floating point support in Cortex-M platforms

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -61,3 +61,4 @@
 - tests/platforms/QuickFeather.robot
 - tests/platforms/STM32F072b.robot
 - tests/platforms/BeagleV-StarLight.robot
+- tests/unit-tests/arm-cortex-m-fpu.robot
