[GH#161] tests: Add unhandled access tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -62,3 +62,4 @@
 - tests/platforms/STM32F072b.robot
 - tests/platforms/BeagleV-StarLight.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
+- tests/unit-tests/log-tests.robot
