--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -63,3 +63,4 @@
 - tests/platforms/BeagleV-StarLight.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
 - tests/unit-tests/log-tests.robot
+- tests/unit-tests/hex.robot
