--- a/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
+++ b/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="Verilated\Peripherals\BaseDoubleWordVerilatedPeripheral.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedUART.cs" />
-    <Compile Include="Connection\CommunicationChannel.cs" />
+    <Compile Include="Connection\IVerilatedPeripheral.cs" />
+    <Compile Include="Connection\SocketBasedVerilatedPeripheral.cs" />
+    <Compile Include="Connection\DLLBasedVerilatedPeripheral.cs" />
     <Compile Include="Connection\Protocols\ProtocolMessage.cs" />
     <Compile Include="Connection\Protocols\ActionType.cs" />
   </ItemGroup>
@@ -62,6 +64,10 @@
     <ProjectReference Include="..\..\Infrastructure\src\Emulator\Peripherals\Peripherals.csproj">
       <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
       <Name>Peripherals</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\lib\Migrant\Migrant\Migrant.csproj">
+      <Project>{5F87C357-09FB-4F53-BE37-41FE5BD88957}</Project>
+      <Name>Migrant</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
