[#27200] Zedboard: Add robot tests for GPIO

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -61,6 +61,7 @@
 - tests/platforms/QuickFeather.robot
 - tests/platforms/STM32F072b.robot
 - tests/platforms/BeagleV-StarLight.robot
+- tests/platforms/Zedboard.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
 - tests/unit-tests/log-tests.robot
 - tests/unit-tests/hex.robot
