[#27433] virtio: Add VirtIO model

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -69,3 +69,4 @@
 - tests/unit-tests/log-tests.robot
 - tests/unit-tests/hex.robot
 - tests/unit-tests/big-endian-watchpoint.robot
+- tests/peripherals/VirtIO.robot
