[#27464] Leon3: Add Zephyr shell resc and automated test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -62,6 +62,7 @@
 - tests/platforms/STM32F072b.robot
 - tests/platforms/BeagleV-StarLight.robot
 - tests/platforms/Zedboard.robot
+- tests/platforms/Leon3.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
 - tests/unit-tests/log-tests.robot
 - tests/unit-tests/hex.robot
