[#36284] VerilatedPeripheral: Extract base classes for verilated peripherals

--- a/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
+++ b/src/Plugins/VerilatorPlugin/VerilatorPlugin.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Verilated\Peripherals\BaseDoubleWordVerilatedPeripheral.cs" />
     <Compile Include="Verilated\Peripherals\CFUVerilatedPeripheral.cs" />
+    <Compile Include="Verilated\Peripherals\BaseVerilatedPeripheral.cs" />
+    <Compile Include="Verilated\Peripherals\VerilatedPeripheral.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedUART.cs" />
     <Compile Include="Connection\IVerilatedPeripheral.cs" />
     <Compile Include="Connection\SocketVerilatorConnection.cs" />
