--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -28,6 +28,9 @@
 - tests/platforms/verilated/MuraxAPB3.robot
 - tests/platforms/verilated/zynq_verilated_fastvdma.robot
 - tests/platforms/verilated/zynq_verilated_fpga_isp.robot
+- tests/platforms/verilated/verilated_ibex_litex_bios.robot
+- tests/platforms/verilated/verilated_ibex_interrupts.robot
+- tests/platforms/verilated/verilated_ibex_pause_resume.robot
 - tests/platforms/CC2538/cc2538_rpl-udp.robot
 - tests/platforms/CC2538/cc2538_flash_controller.robot
 - tests/platforms/CC2538/cc2538_single-node.robot
