[#28110] platforms: Add GR716

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -65,6 +65,7 @@
 - tests/platforms/BeagleV-StarLight.robot
 - tests/platforms/Zedboard.robot
 - tests/platforms/Leon3.robot
+- tests/platforms/GR716.robot
 - tests/platforms/MPC5567.robot
 - tests/unit-tests/arm-cortex-m-fpu.robot
 - tests/unit-tests/log-tests.robot
