--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Network\NetworkServer\IServerModule.cs" />
     <Compile Include="Network\NetworkServer\Modules\TftpServerModule.cs" />
     <Compile Include="Integrations\ArduinoLoader.cs" />
+    <Compile Include="Integrations\AsciinemaRecorder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
