[#28424] MappedMemory: Fix memory invalidation on write

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -70,3 +70,4 @@
 - tests/unit-tests/hex.robot
 - tests/unit-tests/big-endian-watchpoint.robot
 - tests/peripherals/VirtIO.robot
+- tests/unit-tests/memory-invalidation.robot
